--- a/products.html
+++ b/products.html
@@ -84,8 +84,8 @@
                                         <button class="btn btn-small" onclick="w3.toggleShow('#x2') "> Search</button>
                                         <!-- <button class="btn btn-small" onclick="w3.toggleShow('#x3') "> Update</button> -->
                                         <button class="btn btn-small" onclick="w3.toggleShow('#x4') "> Delete</button>        
-                                        <button class="btn btn-small" onclick="findphones()">All Phones</button>      
-                                        <button class="btn btn-small" onclick="findlaptops()">All Laptops</button>                                  
+                                        <button class="btn btn-small" onclick="findphones()">Phones</button>      
+                                        <button class="btn btn-small" onclick="findlaptops()">Laptops</button>                                  
                                         <div id="phonelaptop">
                                         </div>
                             </div>
