ON DELETE CASCADE change

--- a/reports.html
+++ b/reports.html
@@ -57,7 +57,7 @@
                                 </li>
 
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="reports.html">Reports</a>
+                                    <a class="nav-link" href="reports.html">Reports - Options</a>
                                 </li>
 
                             </ul>
